adding business questions

--- a/final_modelling.ipynb
+++ b/final_modelling.ipynb
@@ -398,6 +398,7 @@
     }
    ],
    "source": [
+    "# we can see the optimal params for r^2 and mse based on 10-fold cross validation\n",
     "dt_mse_df.plot(x='param', y='mean_mse', yerr='std_mse')"
    ]
   },
@@ -461,6 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fitting the model on the full traning data based on the optimal ccp\n",
     "optimal_ccp = float(get_optimal_model_params(dt_r2_df, 'r2', '_max')['param'])\n",
     "c = CustomImputer()\n",
     "c.fit(X_train)\n",
@@ -484,6 +486,7 @@
     }
    ],
    "source": [
+    "# most important features boiled down to a smaller subset, probably too parsimonious for my liking\n",
     "for i,j in zip(X_train.columns,important_features):\n",
     "    if j > 0.0:\n",
     "        print(i,j)"
@@ -524,6 +527,13 @@
     "lasso_r2_df, lasso_mse_df = errors_to_df(lasso_r2_average,lasso_mse_average)\n",
     "ridge_r2_df, ridge_mse_df = errors_to_df( ridge_r2_average, ridge_mse_average)"
    ]
+  },
+  {
+   "source": [
+    "### The curves across params based on 10-fold cross validation. All processing steps (standardising of inputs and missing value imputation for review score rating and reviews per month) occur within the cross validation loop. The below charts look very flat, indicating that regularisation probably does little better than an unpenalised regression model. This could also indicate a number of irrelevant features in the model."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -696,6 +706,13 @@
    ]
   },
   {
+   "source": [
+    "### I opt to proceed with the Lasso model. This seems to perform (slightly) better than the other approaches and is more interpretable. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
@@ -737,6 +754,13 @@
    "source": [
     "lasso_opt.fit(X_train_lasso, y_train)"
    ]
+  },
+  {
+   "source": [
+    "### Deriving the most important features. Nothing fancy here, just ranking the standardised regression coefficients. Colour red used to identify the negatively impacting features and added to the plot"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
